--- a/package.json
+++ b/package.json
@@ -1,27 +1,55 @@
 {
   "name": "socketio-es6-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple ES6 starter. NodeJS, Express, SocketIO",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf dist/"
   },
+  "engine": "node 6.3.0",
   "author": "Hagen Sommerkorn <hagen.sommerkorn@gmail.com> (https://github.com/riebel)",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.50.0",
+    "body-parser": "^1.17.1",
     "compression": "^1.6.1",
-    "express": "^4.13.4",
+    "cors": "^2.8.3",
+    "crypto": "0.0.3",
+    "del": "^2.2.2",
+    "express": "^4.15.2",
+    "express-fileupload": "^0.1.3",
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
+    "gulp-sass": "^3.1.0",
+    "lokijs": "^1.4.3",
+    "multer": "^1.3.0",
+    "node-sass": "^3.8.0",
+    "q": "^1.5.0",
+    "sass-loader": "^4.0.0",
     "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6"
+    "socket.io-client": "^1.4.6",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "browser-sync": "^2.18.8",
+    "extract-text-webpack-plugin": "^2.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-nodemon": "^2.0.7",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^1.13.0",
+    "webpack-dev-server": "^2.4.5",
     "webpack-stream": "^3.2.0"
   }
 }
